--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -19,6 +19,8 @@ $border-color: #CCCCCC;
 $button-top-color: #CCCCCC;
 $button-bottom-color: #999999;
 
+$blockquote-background-color: #FBFBFB;
+
 //font
 $main-font-face: 'Quicksand';
 $body-font-size: 14pt;
